[FT:#5828] Now transpile server with babel to allow ES6 module usage and store module loading in server process.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -13,10 +13,11 @@
     "coverageDirectory": "coverage/snapshot"
   },
   "scripts": {
-    "build": "npm run build:main && npm run build:renderer",
+    "build": "npm run build:main && npm run build:renderer && npm run build:server",
     "build:main": "node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.main.js --progress --profile --colors",
     "build:renderer": "NODE_ENV=production node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.renderer.production.js --progress --profile --colors",
-    "clean": "rimraf ./dist ./main.js ./main.js.map stats.json",
+    "build:server": "node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.server.js --progress --profile --colors",
+    "clean": "rimraf ./dist ./main.js ./main.js.map ./server.js ./server.js.map stats.json",
     "hello": "npm run link && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
     "link": "npm link ../../../../../common/src/main/js/common && npm link ../../../../../server/src/main/js/server && (cd ../../../../../server/src/main/js/server && npm run hello) && npm run install-rtd",
     "lint": "eslint .",
@@ -37,7 +38,7 @@
     "update-rtd": "./manageRTD.sh --update",
     "install-rtd": "./manageRTD.sh --install && cd node_modules/rtd && npm install",
     "postinstall": "electron-rebuild",
-    "webpack": "webpack-dashboard -- node -r babel-register -r ./lib/common/initParameters.js webpack/server.js"
+    "webpack": "node -r babel-register -r ./lib/common/initParameters.js webpack/server.js"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
