--- a/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
@@ -21,6 +21,11 @@
     "uuid": "~3.0.1"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "~3.5.0",
     "chai-jest-snapshot": "~0.2.1",
     "chai-properties": "~1.2.1",
