[FT:#5828] remove use of sinon for rtd stub

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -36,6 +36,7 @@
     "wp": "npm run webpack",
     "update-rtd": "./manageRTD.sh --update",
     "install-rtd": "./manageRTD.sh --install && cd node_modules/rtd && npm install",
+    "copy-rtd": "./manageRTD.sh --copy",
     "postinstall": "electron-rebuild",
     "webpack": "webpack-dashboard -- node -r babel-register -r ./lib/common/initParameters.js webpack/server.js"
   },
