--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -54,13 +54,11 @@
   "dependencies": {
     "ajv": "~4.11.5",
     "asar": "~0.13.0",
-    "async": "~2.3.0",
+    "async": "~2.4.0",
     "babel-core": "~6.24.0",
     "babel-eslint": "~7.2.1",
     "babel-jest": "~19.0.0",
     "babel-loader": "~6.4.1",
-    "babel-plugin-add-module-exports": "~0.2.1",
-    "babel-plugin-dev-expression": "~0.2.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-class-properties": "~6.23.0",
     "babel-polyfill": "~6.23.0",
@@ -190,5 +188,8 @@
     ],
     "report-dir": "./coverage/test"
   },
-  "style": "./lib/app.global.css"
+  "style": "./lib/app.global.css",
+  "devDependencies": {
+    "babel-plugin-add-module-exports": "^0.2.1"
+  }
 }
