--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -161,7 +161,8 @@
     "webpack-dev-middleware": "~1.10.1",
     "webpack-hot-middleware": "~2.18.0",
     "webpack-merge": "~1.1.2",
-    "why-did-you-update": "~0.0.8"
+    "why-did-you-update": "~0.0.8",
+    "zmq": "^2.15.3"
   },
   "peerDependencies": {
     "rtd": "node_modules/rtd",
