--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -80,6 +80,7 @@
     "d3-scale": "~1.0.5",
     "d3-selection": "^1.0.5",
     "d3-time-format": "~2.0.5",
+    "decimal.js": "^7.2.1",
     "deep-diff": "~0.3.4",
     "deep-freeze": "~0.0.1",
     "devtron": "~1.4.0",
