--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lpisis_gpcchs_e_clt",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "description": "",
   "main": "main.js",
   "jest": {
@@ -49,7 +49,7 @@
     "url": "gitolite@isis.cnes-isis.toulouse.atos.net:gpcc/LPISIS/GPCCHS.git"
   },
   "author": "ATOS",
-  "license": "ISC",
+  "license": "ATOS",
   "keywords": [],
   "dependencies": {
     "ajv": "~4.11.5",
@@ -165,6 +165,9 @@
     "why-did-you-update": "~0.0.8",
     "zmq": "^2.15.3"
   },
+  "devDependencies": {
+    "babel-plugin-add-module-exports": "^0.2.1"
+  },
   "peerDependencies": {
     "rtd": "node_modules/rtd",
     "common": "../../../../../common/src/main/js/common",
@@ -190,8 +193,5 @@
     ],
     "report-dir": "./coverage/test"
   },
-  "style": "./lib/app.global.css",
-  "devDependencies": {
-    "babel-plugin-add-module-exports": "^0.2.1"
-  }
+  "style": "./lib/app.global.css"
 }
