--- a/GPCCHS_E_VIS/src/impl/parent/pom.xml
+++ b/GPCCHS_E_VIS/src/impl/parent/pom.xml
@@ -35,6 +35,14 @@
         <classifier>unix_dev</classifier>
         <version>${gpcchs.version}</version>
       </dependency>
+      <dependency>
+        <groupId>fr.cnes.lpisis.gpds.js</groupId>
+        <artifactId>gpds_rtd</artifactId>
+        <type>isis-js-module-dependency</type>
+       <classifier>unix_dev</classifier>
+        <version>${gpds.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 </project>
