--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -102,6 +102,7 @@
     "eslint-plugin-jsx-a11y": "~4.0.0",
     "eslint-plugin-react": "~6.10.3",
     "eslint-plugin-react-perf": "~2.0.4",
+    "exit": "~0.1.2",
     "express": "~4.15.2",
     "extract-text-webpack-plugin": "~1.0.1",
     "fbjs-scripts": "~0.7.1",
@@ -117,6 +118,7 @@
     "less-loader": "~4.0.3",
     "lockfile": "~1.0.3",
     "lodash": "~4.17.4",
+    "lokijs": "~1.4.2",
     "long": "^3.2.0",
     "mkdirp": "~0.5.1",
     "mocha": "~3.2.0",
