[HL] Add lint-reporter csv generator .
using npm run lint:report, you can generate a linting report
it creates 2 csv files in lint-reporter/ folder

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -24,6 +24,7 @@
     "link:rtd": "npm link ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && (cd ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && npm install)",
     "link": "npm run link:common && npm run link:rtd",
     "lint": "eslint .",
+    "lint:report": "node -r babel-register lint-reporter/lint-reporter.js",
     "sh": "npm run start-hot",
     "start": "./scripts/start.sh",
     "start-hot": "HOT=1 electron -r babel-register -r babel-polyfill ./main.development",
