--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -119,6 +119,7 @@
     "lodash": "~4.17.4",
     "lokijs": "~1.4.2",
     "long": "^3.2.0",
+    "minimist": "^1.2.0",
     "mkdirp": "~0.5.1",
     "mocha": "~3.2.0",
     "moment": "~2.18.1",
