[FT:#6762] RTD can now be disabled using RTD_ON in config
RTD is disabled by default due to the asymmetry beetween GPDS and
GPCCHS R8-dev branches.
in config.sample.json, RTD_ON is set to 'on' in order to have a stubbed
RTD in development.

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
@@ -11,5 +11,6 @@
   "WORKSPACE": "dev.workspace.json",
   "STUB_DC_ON": "on",
   "STUB_RTD_ON": "on",
+  "RTD_ON": "on",
   "RTD_UNIX_SOCKET": "/data/isis/work/redis/rtdRedisDb.sock"
 }
