--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -61,6 +61,7 @@
     "babel-eslint": "~7.2.1",
     "babel-jest": "~19.0.0",
     "babel-loader": "~6.4.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-class-properties": "~6.23.0",
     "babel-polyfill": "~6.23.0",
@@ -104,6 +105,7 @@
     "exit": "~0.1.2",
     "express": "~4.15.2",
     "extract-text-webpack-plugin": "~1.0.1",
+    "fakeredis": "^1.0.3",
     "fbjs-scripts": "~0.7.1",
     "file-loader": "~0.11.1",
     "html-to-react": "~1.2.4",
@@ -114,7 +116,7 @@
     "jsdom": "~9.12.0",
     "json-loader": "~0.5.4",
     "less": "~2.7.2",
-    "less-loader": "~4.0.3",
+    "less-loader": "~3.0.0",
     "lockfile": "~1.0.3",
     "lodash": "~4.17.4",
     "lokijs": "~1.4.2",
@@ -169,13 +171,9 @@
     "webpack-merge": "~1.1.2",
     "why-did-you-update": "~0.0.8"
   },
-  "devDependencies": {
-    "babel-plugin-add-module-exports": "^0.2.1"
-  },
   "peerDependencies": {
     "rtd": "../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd",
-    "common": "../../../../../common/src/main/js/common",
-    "d3-time": "1.0.4"
+    "common": "../../../../../common/src/main/js/common"
   },
   "devEngines": {
     "node": "6.x",
