--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -13,18 +13,19 @@
     "coverageDirectory": "coverage/snapshot"
   },
   "scripts": {
-    "build": "npm run build:main && npm run build:renderer && npm run build:server",
+    "build": "npm run build:main && npm run build:renderer && npm run build:server && npm run package:electron",
     "build:main": "node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.main.js --progress --profile --colors",
     "build:renderer": "NODE_ENV=production node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.renderer.production.js --progress --profile --colors",
     "build:server": "node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.server.js --progress --profile --colors",
-    "clean": "rimraf ./dist ./main.js ./main.js.map ./server.js ./server.js.map stats.json",
+    "package:electron": "cd dist && electron-packager . --no-prune --overwrite",
+    "clean": "rimraf ./dist stats.json",
     "hello": "npm run link && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
     "link:common": "npm link ../../../../../common/src/main/js/common && (cd ../../../../../common/src/main/js/common && npm install)",
     "link:rtd": "npm link ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && (cd ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && npm install)",
     "link": "npm run link:common && npm run link:rtd",
     "lint": "eslint .",
     "sh": "npm run start-hot",
-    "start": "electron ./",
+    "start": "cp config.local.json ./dist/lpisis_gpcchs_e_clt-linux-x64/resources/app && ./dist/lpisis_gpcchs_e_clt-linux-x64/lpisis_gpcchs_e_clt",
     "start-hot": "HOT=1 electron -r babel-register -r babel-polyfill ./main.development",
     "test": "NODE_ENV=test mocha --compilers js:babel-register \"lib/**/*.spec.js\"",
     "test:watch": "npm test -- --watch",
@@ -76,6 +77,7 @@
     "chai-properties": "~1.2.1",
     "classnames": "~2.2.5",
     "codemirror": "~5.25.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "~0.28.0",
     "d3-array": "^1.1.1",
     "d3-axis": "^1.0.6",
