[HL] Exclude dist folder in nyc configuration
Because istanbul should not pass on bundled vima

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -192,7 +192,8 @@
     "cache": true,
     "exclude": [
       "**/*.spec.js",
-      "lib/windowProcess/**"
+      "lib/windowProcess/**",
+      "dist/**"
     ],
     "include": [
       "lib/**/*.js"
