--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -6,7 +6,8 @@
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha \"!(node_modules)/**/*.spec.js\"",
     "lint": "eslint .",
     "test": "mocha \"!(node_modules)/**/*.spec.js\"",
-    "test-proto" : "mocha \"!(node_modules)/**/*.spec.js\" --grep protobuf/lpisis/execution/Execution",
+    "jest": "jest",
+    "test-proto": "mocha \"!(node_modules)/**/*.spec.js\" --grep protobuf/lpisis/execution/Execution",
     "perf": "mocha \"!(node_modules)/**/*.spec.perf.js\"",
     "test:watch": "npm run test -- --watch",
     "tw": "npm test -- --watch",
@@ -26,7 +27,7 @@
   "devDependencies": {
     "babel-core": "~6.22.1",
     "babel-eslint": "~7.1.1",
-    "babel-jest": "~18.0.0",
+    "babel-jest": "^20.0.3",
     "babel-loader": "~6.2.5",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-class-properties": "~6.22.0",
@@ -44,7 +45,13 @@
     "eslint-config-airbnb-base": "^11.1.1",
     "eslint-plugin-import": "^2.2.0",
     "istanbul": "~0.4.5",
+    "jest": "^20.0.4",
     "json-loader": "~0.5.4",
     "mocha": "~3.2.0"
+  },
+  "jest": {
+    "verbose": true,
+    "testRegex": "(spec)\\.(js|jsx)$",
+    "coverageDirectory": "coverage/snapshot"
   }
 }
