[FT:#6670] Fix jest transform ignore patterns
we need to transpile node_modules/common, but not node_modules/* and node_modules/common/node_modules/*

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -5,10 +5,13 @@
   "main": "main.js",
   "jest": {
     "verbose": true,
-    "testRegex": "(snapshot)\\.(js|jsx)$",
+    "testRegex": "(spec)\\.(js|jsx)$",
     "moduleNameMapper": {
       "\\.(less|css)$": "identity-obj-proxy"
     },
+    "transformIgnorePatterns": [
+      "node_modules\/(?!common)|(node_modules\/common\/node_modules)"
+    ],
     "collectCoverageFrom": ["lib/windowProcess/**/*.js"],
     "coverageDirectory": "coverage/snapshot"
   },
