--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -12,8 +12,8 @@
     "transformIgnorePatterns": [
       "node_modules\/(?!common)|(node_modules\/common\/node_modules)"
     ],
-    "collectCoverageFrom": ["lib/windowProcess/**/*.js"],
-    "coverageDirectory": "coverage/snapshot"
+    "collectCoverageFrom": ["lib/**/*.js"],
+    "coverageDirectory": "coverage/jest"
   },
   "scripts": {
     "build": "npm run build:main && npm run build:renderer && npm run build:server && npm run package:electron",
