--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -13,7 +13,8 @@
       "node_modules\/(?!common)|(node_modules\/common\/node_modules)"
     ],
     "collectCoverageFrom": ["lib/**/*.js"],
-    "coverageDirectory": "coverage/jest"
+    "coverageDirectory": "coverage/jest",
+    "setupTestFrameworkScriptFile": "./lib/common/bootTest.js"
   },
   "scripts": {
     "build": "npm run build:main && npm run build:renderer && npm run build:server && npm run package:electron",
