--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -10,9 +10,11 @@
       "\\.(less|css)$": "identity-obj-proxy"
     },
     "transformIgnorePatterns": [
-      "node_modules\/(?!common)|(node_modules\/common\/node_modules)"
+      "node_modules/(?!common)|(node_modules/common/node_modules)"
     ],
-    "collectCoverageFrom": ["lib/**/*.js"],
+    "collectCoverageFrom": [
+      "lib/**/*.js"
+    ],
     "coverageDirectory": "coverage/jest",
     "setupTestFrameworkScriptFile": "./lib/common/bootTest.js"
   },
@@ -163,6 +165,7 @@
     "redux-electron-store": "~0.4.1",
     "redux-form": "~6.6.1",
     "redux-logger": "~3.0.1",
+    "redux-mock-store": "^1.2.3",
     "redux-thunk": "~2.2.0",
     "reselect": "~3.0.0",
     "rimraf": "~2.6.1",
