--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -15,7 +15,7 @@
     "collectCoverageFrom": [
       "lib/**/*.js"
     ],
-    "coverageDirectory": "coverage/jest",
+    "coverageDirectory": "coverage/test",
     "setupTestFrameworkScriptFile": "./lib/common/bootTest.js"
   },
   "scripts": {
@@ -34,16 +34,10 @@
     "sh": "npm run start-hot",
     "start": "./scripts/start.sh",
     "start-hot": "HOT=1 electron -r babel-register -r babel-polyfill ./main.development",
-    "test": "NODE_ENV=test mocha --compilers js:babel-register \"lib/**/*.spec.js\"",
+    "test": "jest",
     "test:watch": "npm test -- --watch",
-    "jest": "jest",
-    "test:coverage": "(time nyc --require babel-register npm test || true) && npm run open:test-coverage",
-    "open:test-coverage": "firefox coverage/test/lcov-report/index.html",
-    "snapshot": "NODE_ENV=snapshot BABEL_DISABLE_CACHE=1 jest",
-    "snapshot:coverage": "(npm run snapshot -- --coverage || true) && npm run open:snapshot-coverage",
-    "open:snapshot-coverage": "firefox coverage/snapshot/lcov-report/index.html",
-    "snapshot:watch": "npm run snapshot -- --watch",
-    "snapshot:clean": "jest -u",
+    "test:coverage": "npm test -- --coverage && npm run open:test-coverage",
+    "open:test:coverage": "firefox coverage/test/lcov-report/index.html",
     "tw": "npm test -- --watch",
     "wp": "npm run webpack",
     "update-rtd": "./manageRTD.sh --update",
@@ -82,8 +76,6 @@
     "babel-preset-stage-0": "~6.22.0",
     "babel-register": "~6.24.0",
     "bootstrap": "~3.3.7",
-    "chai": "~3.5.0",
-    "chai-properties": "~1.2.1",
     "classnames": "~2.2.5",
     "codemirror": "~5.25.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -170,7 +162,6 @@
     "reselect": "~3.0.0",
     "rimraf": "~2.6.1",
     "sinon": "~2.1.0",
-    "sinon-chai": "^2.9.0",
     "source-map-support": "~0.4.14",
     "spectron": "~3.6.1",
     "style-loader": "~0.16.1",
