[FT:#6670] Restore commonEditor/Fields/FiltersFields tests + add test env in babelrc

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.babelrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.babelrc
@@ -8,6 +8,7 @@
   	"babel-plugin-add-module-exports"
   ],
   "env": {
+    "test": {},
     "production": {
       "presets": [
         "react-optimize"
