--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -36,7 +36,7 @@
     "start-hot": "HOT=1 electron -r babel-register -r babel-polyfill ./main.development",
     "test": "NODE_ENV=test jest",
     "test:watch": "npm test -- --watch",
-    "test:coverage": "npm test -- --coverage && npm run open:test-coverage",
+    "test:coverage": "npm test -- --coverage && npm run open:test:coverage",
     "open:test:coverage": "firefox coverage/test/lcov-report/index.html",
     "tw": "npm test -- --watch",
     "wp": "npm run webpack",
