[FT:#5828] Fix .babelrc configuration in client sub component

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.babelrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.babelrc
@@ -5,8 +5,7 @@
     "react"
   ],
   "plugins": [
-  	"babel-plugin-add-module-exports",
-	"babel-plugin-lodash"
+  	"babel-plugin-add-module-exports"
   ],
   "env": {
     "test": {},
@@ -15,13 +14,16 @@
         "react-optimize"
       ],
       "plugins": [
-		"transform-class-properties"
+		"babel-plugin-lodash"
       ]
     },
     "development": {
       "presets": [
         "react-hmre"
-      ]
+      ],
+	  "plugins": [
+		"babel-plugin-lodash"
+	  ]
     }
   }
 }
