--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -16,7 +16,7 @@
       "lib/**/*.js"
     ],
     "coverageDirectory": "coverage/test",
-    "setupTestFrameworkScriptFile": "./lib/common/bootTest.js"
+    "setupTestFrameworkScriptFile": "./lib/common/jest.js"
   },
   "scripts": {
     "build": "npm run build:main && npm run build:renderer && npm run build:server && npm run package:electron",
