[FT:#6670] Move and rename jest.js in jest/setup.js + test.js in jest/index.js

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -16,7 +16,7 @@
       "lib/**/*.js"
     ],
     "coverageDirectory": "coverage/test",
-    "setupTestFrameworkScriptFile": "./lib/common/jest.js"
+    "setupTestFrameworkScriptFile": "./lib/common/jest/setup.js"
   },
   "scripts": {
     "build": "npm run build:main && npm run build:renderer && npm run build:server && npm run package:electron",
