--- a/GPCCHS_E_VIS/src/adapters/isis/package.json
+++ b/GPCCHS_E_VIS/src/adapters/isis/package.json
@@ -1,8 +1,27 @@
 {
   "name": "isis-adapter",
   "version": "0.0.1",
+  "jest": {
+    "verbose": true,
+    "testRegex": "(spec)\\.(js|jsx)$",
+    "moduleNameMapper": {
+      "\\.(less|css)$": "identity-obj-proxy"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!common)|(node_modules/common/node_modules)"
+    ],
+    "collectCoverageFrom": [
+      "lib/**/*.js"
+    ],
+    "coverageDirectory": "coverage/test"
+  },
   "dependencies": {
     "bytebuffer": "~5.0.1",
-    "lodash": "~4.17.4"
+    "lodash": "~4.17.4",
+    "protobufjs": "~6.7.3",
+    "jest": "~20.0.4"
+  },
+  "scripts" : {
+    "test": "NODE_ENV=test jest"
   }
 }
