[FT:#6670] Change jest config : testPathIgnorePatterns

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -6,6 +6,10 @@
   "jest": {
     "verbose": true,
     "testRegex": "(spec)\\.(js|jsx)$",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ],
     "moduleNameMapper": {
       "\\.(less|css)$": "identity-obj-proxy"
     },
