[FT:#6700] Add store enhancers helpers code coverage and merge with dev

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -113,6 +113,7 @@
     "express": "~4.15.2",
     "extract-text-webpack-plugin": "~1.0.1",
     "fakeredis": "^1.0.3",
+    "fast-json-patch": "^1.2.2",
     "fbjs-scripts": "~0.7.1",
     "file-loader": "~0.11.1",
     "html-to-react": "~1.2.4",
@@ -122,6 +123,7 @@
     "js-beautify": "~1.6.12",
     "jsdom": "~9.12.0",
     "json-loader": "~0.5.4",
+    "json-touch-patch": "^0.11.1",
     "less": "~2.7.2",
     "less-loader": "~3.0.0",
     "lockfile": "~1.0.3",
@@ -157,7 +159,6 @@
     "react-test-renderer": "~15.4.2",
     "react-treebeard": "^1.1.4",
     "redux": "~3.6.0",
-    "redux-electron-store": "~0.4.1",
     "redux-form": "~6.6.1",
     "redux-logger": "~3.0.1",
     "redux-mock-store": "^1.2.3",
