[FT:#6109] Fix state colors that should not be here

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -22,9 +22,7 @@
     "critical": "red",
     "outOfRange": "grey",
     "severe": "darkred",
-    "warning": "orange",
-    "nonsignificant": "lightgrey",
-    "obsolete": "tan"
+    "warning": "orange"
   },
   "FORECAST": 30000,
   "STRING_PLOT_VALUE": 1,
