--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -38,6 +38,7 @@
     "sh": "npm run start-hot",
     "start": "./scripts/start.sh",
     "start-hot": "HOT=1 electron -r babel-register -r babel-polyfill ./main.development",
+    "start:dc:stub": "LOG=console ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:5042 ZMQ_GPCCDC_PULL=tcp://127.0.0.1:5043 node ./lib/stubProcess/dc.js",
     "test": "NODE_ENV=test jest",
     "test:watch": "npm test -- --watch",
     "test:coverage": "npm test -- --coverage && npm run open:test:coverage",
