--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -18,11 +18,12 @@
   "VISU_WINDOW_UP_MS": 30000,
   "VISU_WINDOW_DEFAULT_WIDTH": 900000,
   "STATE_COLORS": {
-    "alarm": "orangered",
-    "critical": "red",
-    "outOfRange": "grey",
-    "severe": "darkred",
-    "warning": "orange"
+    "alarm": "darkorange",
+    "critical": "darkred",
+    "outOfRange": "darkred",
+    "severe": "#FF0000",
+    "danger": "#FF0000",
+    "warning": "#FFFF00"
   },
   "FORECAST": 30000,
   "STRING_PLOT_VALUE": 1,
