[FT:#6670] Add basic player middleware .

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -3,6 +3,7 @@
   "DEBUG": "off",
   "WDYU": "off",
   "ORCHESTRATION_FREQUENCY": 500,
+  "PLAYER_FREQUENCY": 500,
   "CACHE_INVALIDATION_FREQUENCY": 300000,
   "WILDCARD_CHARACTER": "*",
   "DEFAULT_FIELD": {
