--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -1,5 +1,8 @@
 {
   "PROFILING": "off",
+  "SERVER_HEALTH_CRITICAL_DELAY": 500,
+  "MAIN_HEALTH_CRITICAL_DELAY": 500,
+  "RENDERER_HEALTH_CRITICAL_DELAY": 500,
   "DEBUG": "off",
   "WDYU": "off",
   "ORCHESTRATION_FREQUENCY": 500,
