--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -18,6 +18,11 @@
   "VISU_WINDOW_LOW_MS": 300000,
   "VISU_WINDOW_UP_MS": 30000,
   "VISU_WINDOW_DEFAULT_WIDTH": 900000,
+  "VISU_WINDOW_MAX_DURATION": {
+    "PlotView": 43200000,
+    "HistoryView": 3600000,
+    "PacketView": 3600000
+  },
   "STATE_COLORS": {
     "alarm": "darkorange",
     "critical": "darkred",
