[FT:#6700] Add incomingData middleware that throttle data sending to reducers

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -6,6 +6,7 @@
   "DEBUG": "off",
   "WDYU": "off",
   "ORCHESTRATION_FREQUENCY": 500,
+  "INCOMING_DATA_INJECTION_FREQUENCY": 3000,
   "PLAYER_FREQUENCY": 500,
   "CACHE_INVALIDATION_FREQUENCY": 300000,
   "WILDCARD_CHARACTER": "*",
