--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -38,7 +38,7 @@
     "lint:report": "node -r babel-register scripts/lint-reporter/lint-reporter.js",
     "sh": "npm run start-hot",
     "start": "./scripts/start.sh",
-    "start-hot": "HOT=1 electron -r babel-register -r babel-polyfill ./main.development",
+    "start-hot": "APP_ENV=main HOT=1 electron -r babel-register -r babel-polyfill ./main.development",
     "start:dc:stub": "LOG=console ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:5042 ZMQ_GPCCDC_PULL=tcp://127.0.0.1:5043 ISIS_DOCUMENTS_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/main/js/client/data WORKSPACE=dev.workspace.json node ./lib/stubProcess/dc.js",
     "test": "NODE_ENV=test jest",
     "test:watch": "npm test -- --watch",
