[FT:#6891] Rename test folder in common and use jest for tests

--- a/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
@@ -3,11 +3,13 @@
   "installedESLint": true,
   "globals": {
     "describe": true,
-    "it": true,
-    "before": true,
-    "after": true,
     "beforeEach": true,
-    "afterEach": true
+    "afterEach": true,
+    "expect": true,
+    "jest": true,
+    "test": true,
+    "beforeAll": true,
+    "afterAll": true
   },
   "rules": {
     "max-statements-per-line": ["warn", { "max": 1 }],
