--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha \"!(node_modules)/**/*.spec.js\"",
     "lint": "eslint .",
-    "test": "mocha \"!(node_modules)/**/*.spec.js\"",
-    "jest": "jest",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "npm test -- --watch",
     "test-proto": "mocha \"!(node_modules)/**/*.spec.js\" --grep protobuf/lpisis/execution/Execution",
     "perf": "mocha \"!(node_modules)/**/*.spec.perf.js\"",
-    "test:watch": "npm run test -- --watch",
     "tw": "npm test -- --watch",
     "dc-stub": "DEBUG=GPCCHS:* LEVEL=INFO ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:5042 ZMQ_GPCCDC_PULL=tcp://127.0.0.1:49165 node stubs/dc.js",
     "dc-reg": "DEBUG=GPCCHS:* LEVEL=INFO ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:5042 ZMQ_GPCCDC_PULL=tcp://127.0.0.1:49165 node stubs/dcTestReg.js"
@@ -50,6 +49,7 @@
   "jest": {
     "verbose": true,
     "testRegex": "(spec)\\.(js|jsx)$",
-    "coverageDirectory": "coverage/snapshot"
+    "coverageDirectory": "coverage/snapshot",
+    "setupTestFrameworkScriptFile": "../../../../../client/src/main/js/client/lib/common/jest/setup.js"
   }
 }
