[FT:#7299] Add script to install npm dependencies for the adapters

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -29,14 +29,14 @@
     "build:server": "node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.server.js --progress --profile --colors",
     "package:electron": "cd dist && electron-packager . --no-prune --overwrite",
     "clean": "rimraf ./dist stats.json ./coverage ./scripts/lint-reporter/*.csv",
-    "hello": "npm run link && npm run install:adapters && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
-    "install:adapters": "(cd ../../../../../adapters/dc && npm install) && (cd ../../../../../adapters/isis && npm install)",
+    "hello": "npm run link && npm run install-adapters && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
+    "install-adapters": "node ./scripts/adaptersInstall.js",
     "link:common": "npm link ../../../../../common/src/main/js/common && (cd ../../../../../common/src/main/js/common && npm install)",
     "link:rtd": "npm link ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && (cd ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && npm install)",
     "link": "npm run link:common && npm run link:rtd",
     "lint": "eslint .",
     "lint:report": "node -r babel-register scripts/lint-reporter/lint-reporter.js",
-    "sh": "npm run start-hot",
+    "sh": "mvn innpm run start-hot",
     "start": "./scripts/start.sh",
     "start-hot": "APP_ENV=main HOT=1 electron -r babel-register -r babel-polyfill ./main.development",
     "start:dc:stub": "LOG=console ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:5042 ZMQ_GPCCDC_PULL=tcp://127.0.0.1:5043 ISIS_DOCUMENTS_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/main/js/client/data WORKSPACE=dev.workspace.json node ./lib/stubProcess/dc.js",
@@ -50,7 +50,7 @@
     "install-rtd": "./manageRTD.sh --install && (cd node_modules/rtd && npm install)",
     "copy-rtd": "./manageRTD.sh --copy",
     "prepare:maven:build": "node ./scripts/prepareMavenBuild.js",
-    "postinstall": "electron-rebuild",
+    "postinstall": "electron-rebuild && npm run install-adapters",
     "webpack": "node -r babel-register -r ./lib/common/initParameters.js webpack/server.js",
     "benchmark-grizzly": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/grizzly.benchmark.js",
     "benchmark-textview": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/textview.benchmark.js"
