--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -29,7 +29,7 @@
     "build:server": "node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.server.js --progress --profile --colors",
     "package:electron": "cd dist && electron-packager . --no-prune --overwrite",
     "clean": "rimraf ./dist stats.json ./coverage ./scripts/lint-reporter/*.csv",
-    "hello": "npm run link && npm run install-adapters && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
+    "hello": "npm run link && npm run install:adapters && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
     "link:common": "npm link ../../../../../common/src/main/js/common && (cd ../../../../../common/src/main/js/common && npm install)",
     "link:rtd": "npm link ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && (cd ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && npm install)",
     "link": "npm run link:common && npm run link:rtd",
@@ -45,10 +45,10 @@
     "open:test:coverage": "firefox coverage/test/lcov-report/index.html",
     "tw": "npm test -- --watch",
     "wp": "npm run webpack",
-    "install-adapters": "node ./scripts/adaptersInstall.js",
-    "install-rtd": "node ./scripts/rtdInstall.js",
+    "install:adapters": "node ./scripts/adaptersInstall.js",
+    "install:rtd": "node ./scripts/rtdInstall.js",
     "prepare:maven:build": "node ./scripts/prepareMavenBuild.js",
-    "postinstall": "electron-rebuild && npm run install-rtd && npm run install-adapters",
+    "postinstall": "electron-rebuild && npm run install:rtd && npm run install:adapters",
     "webpack": "node -r babel-register -r ./lib/common/initParameters.js webpack/server.js",
     "benchmark:grizzly": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/grizzly.benchmark.js",
     "benchmark:textview": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/textview.benchmark.js"
