--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -52,7 +52,8 @@
     "postinstall": "electron-rebuild && npm run install:rtd && npm run install:adapters",
     "webpack": "node -r babel-register -r ./lib/common/initParameters.js webpack/server.js",
     "benchmark:grizzly": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/grizzly.benchmark.js",
-    "benchmark:textview": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/textview.benchmark.js"
+    "benchmark:textview": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/textview.benchmark.js",
+    "benchmark:mimicview": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/mimicview.benchmark.js"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
