--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -139,6 +139,7 @@
     "mkdirp": "~0.5.1",
     "mocha": "~3.2.0",
     "moment": "~2.18.1",
+    "opn": "^5.1.0",
     "postcss": "~5.2.16",
     "postcss-browser-reporter": "~0.5.0",
     "postcss-custom-properties": "~5.0.2",
