[FT:#7453] Change jest config : ignore adapters folder

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -8,7 +8,8 @@
     "testRegex": "(spec)\\.(js|jsx)$",
     "testPathIgnorePatterns": [
       "/node_modules/",
-      "/dist/"
+      "/dist/",
+      "/adapters/"
     ],
     "moduleNameMapper": {
       "\\.(less|css)$": "identity-obj-proxy"
