--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -44,7 +44,8 @@
     "test": "NODE_ENV=test jest",
     "test:adapters": "(cd ./adapters/dc && npm test) && (cd ./adapters/isis && npm test)",
     "test:watch": "npm test -- --watch",
-    "test:coverage": "npm test -- --coverage && npm run open:test:coverage",
+    "test:coverage": "npm test -- --coverage",
+    "zip:coverage": "(cd coverage/test && zip -r ../coverage-report.zip ./lcov-report)",
     "test:all": "npm run test:adapters && npm test",
     "open:test:coverage": "firefox coverage/test/lcov-report/index.html",
     "tw": "npm test -- --watch",
