[FT:#6700] Add throttle timing in configuration .

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -7,6 +7,8 @@
   "WDYU": "off",
   "ORCHESTRATION_FREQUENCY": 500,
   "INCOMING_DATA_INJECTION_FREQUENCY": 200,
+  "PUBSUB_THROTTLE_TIMING" : 1000,
+  "INJECT_DATA_THROTTLE_TIMING" : 500,
   "PLAYER_FREQUENCY": 500,
   "CACHE_INVALIDATION_FREQUENCY": 300000,
   "WILDCARD_CHARACTER": "*",
