[FT:#4574] Create an editor to integrate javascript VIMA into desktop
Conflicts:
	GPCCHS_E_VIS/src/impl/editor/src/main/binResources/bin/vima
	GPCCHS_E_VIS/src/tools/src/main/py/GPCCHS_E_VIS/launcher/gpcchs.py

--- a/GPCCHS_E_VIS/src/pom.xml
+++ b/GPCCHS_E_VIS/src/pom.xml
@@ -16,7 +16,7 @@
     <module>common</module>
     <module>client</module>
     <module>launcher</module>
-    <module>tools</module>
+    <module>impl/editor</module>
   </modules>
   <build>
     <plugins>
