--- a/GPCCHS_E_VIS/src/impl/editor/pom.xml
+++ b/GPCCHS_E_VIS/src/impl/editor/pom.xml
@@ -3,7 +3,7 @@
   <!-- Produced by  -->
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.cnes.lpisis.gpcc.python</groupId>
-  <artifactId>gpcchs_e_vis_tools</artifactId>
+  <artifactId>gpcchs_e_vis_editor</artifactId>
   <packaging>isis-python-module-dependency</packaging>
   <version>1.1.2-R8S4-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
