[FT:#7472] Update javascript VIMA launcher to used iedit and manage the features it launch, remove the  old launcher

--- a/GPCCHS_E_VIS/src/impl/parent/pom.xml
+++ b/GPCCHS_E_VIS/src/impl/parent/pom.xml
@@ -35,6 +35,20 @@
         <classifier>unix_dev</classifier>
         <version>${gpds.version}</version>
       </dependency>
+      <dependency>
+        <groupId>fr.cnes.lpisis.gpcc.python</groupId>
+        <artifactId>gpcc_xmlRuntime</artifactId>
+        <type>isis-python-module-dependency</type>
+        <classifier>unix_dev</classifier>
+        <version>${gpcc.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>fr.cnes.lpisis.gpcc.python</groupId>
+        <artifactId>gpcctc_l_cnt_isisContainerCommon</artifactId>
+        <type>isis-python-module-dependency</type>
+        <classifier>unix_dev</classifier>
+        <version>${gpcc.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
