[HL] Updated DDC for delivery 1.1.2

--- a/ddc/ddc-ng.cfg
+++ b/ddc/ddc-ng.cfg
@@ -3,9 +3,12 @@ url = gitolite@isis.cnes-isis.toulouse.atos.net:gpcc/LPISIS/GPCCHS.git
 tool = git
 
 [Article]
-author = Philippe Combes
-name = GPCCHS
-otcode = GPCC
+author=Philippe Combes
+confidentiality=DLP
+criticity=normale
+delivery_kind=complete
+name=GPCCHS
+otcode=GPCC
 version_branch=
 version_date=2017/02/28
 version_status=
