--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
@@ -8,7 +8,7 @@
   "NODE_PATH": "/usr/share/isis/node-v6.3.0-linux-x64/bin/node",
   "ZMQ_GPCCDC_PUSH": "tcp://127.0.0.1:5042",
   "ZMQ_GPCCDC_PULL": "tcp://127.0.0.1:5043",
-  "WORKSPACE": "dev.workspace.json",
+  "WORKSPACE": "dev.workspace.viws",
   "STUB_DC_ON": "on",
   "STUB_RTD_ON": "on",
   "RTD_ON": "on",
