--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -110,9 +110,9 @@
     "electron-rebuild": "~1.5.7",
     "element-resize-event": "^2.0.9",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "~14.1.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-import-resolver-webpack": "~0.8.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-airbnb-base": "^11.3.2",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "~1.7.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "~4.0.0",
