--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -22,7 +22,7 @@
   "ISIS_DOCUMENTS_ROOT": "/data/isis/documents",
   "VISUWINDOW_MAX_LENGTH": 7200000,
   "VISUWINDOW_CURRENT_UPPER_MIN_MARGIN": 0.1,
-  "VISU_WINDOW_LOW_MS": 3600000,
+  "VISU_WINDOW_LOW_MS": 600000,
   "VISU_WINDOW_UP_MS": 30000,
   "VISU_WINDOW_DEFAULT_WIDTH": 900000,
   "VISU_WINDOW_MAX_DURATION": {
