--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -159,7 +159,7 @@
     "react": "~15.4.2",
     "react-addons-test-utils": "~15.4.2",
     "react-bootstrap": "~0.30.8",
-    "react-codemirror": "~0.3.0",
+    "react-codemirror": "^1.0.0",
     "react-color": "~2.11.4",
     "react-dom": "~15.4.2",
     "react-flatpickr": "~3.2.0",
