[HL] Add .eslintcache in .gitignore .

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.gitignore
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.gitignore
@@ -36,8 +36,9 @@ build/Release
 config.local.json
 config.local.json.bak
 
-# lint reporting
+# lint
 **/lint-reporter/*.csv
+.eslintcache
 
 # IDE
 .idea
