--- a/GPCCHS_E_VIS/src/client/pom.xml
+++ b/GPCCHS_E_VIS/src/client/pom.xml
@@ -35,7 +35,7 @@
     </dependency>
     <dependency>
       <groupId>fr.cnes.lpisis.cots</groupId>
-      <artifactId>npm_cache</artifactId>
+      <artifactId>gpcchs_npm_cache</artifactId>
       <type>isis-cots</type>
       <optional>true</optional>
     </dependency>
