[FT:#7984] Updated pom.xml file to recompile code : patch 1, 1.1.2

--- a/GPCCHS_E_VIS/src/client/pom.xml
+++ b/GPCCHS_E_VIS/src/client/pom.xml
@@ -21,6 +21,7 @@
     <api.work.dir>${api.target.dir}/work</api.work.dir>
     <api.main.dir>${api.work.dir}/${project.artifactId}-${project.version}</api.main.dir>
     <isis.rpm.skip>true</isis.rpm.skip>
+    <isis.rpm.patchlevel>0001</isis.rpm.patchlevel>
   </properties>
   <dependencies>
     <dependency>
