[FT:#8357] Add middleware to set PUB/SUB indicator in perf tool

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -7,7 +7,8 @@
   "WDYU": "off",
   "ORCHESTRATION_FREQUENCY": 500,
   "INCOMING_DATA_INJECTION_FREQUENCY": 200,
-  "PUBSUB_THROTTLE_TIMING" : 1000,
+  "PUBSUB_THROTTLE_TIMING" : 500,
+  "PUB_SUB_MONITOR_TIMING" : 1000,
   "INJECT_DATA_THROTTLE_TIMING" : 500,
   "PATCH_THROTTLE_TIMING" : 100,
   "PLAYER_FREQUENCY": 500,
