[FT:#8557] Add configuration file management for missions adapters

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -167,7 +167,7 @@
       "parsec.s-1"
     ]
   },
-  "MESSAGES_NAMESPACES" : [
+  "CLIENT_ADAPTERS" : [
     {
       "path" : "./adapters/",
       "ns" :"isis"
