--- a/GPCCHS_L_IFL/src/impl/python/converter_test/pom.xml
+++ b/GPCCHS_L_IFL/src/impl/python/converter_test/pom.xml
@@ -4,12 +4,12 @@
     <groupId>fr.cnes.lpisis.gpcc.python</groupId>
     <artifactId>gpcchs_l_ifl_converter_test</artifactId>
     <packaging>isis-python-bundle</packaging>
-    <version>1.1.1-R8S4-SNAPSHOT</version>
+    <version>2.0.0-R10S1-SNAPSHOT</version>
 
     <parent>
         <groupId>fr.cnes.lpisis.gpcc</groupId>
         <artifactId>gpcchs_l_ifl-parent</artifactId>
-        <version>1.1.2-R8S4-SNAPSHOT</version>
+        <version>2.0.0-R10S1-SNAPSHOT</version>
         <relativePath/>
     </parent>
     
@@ -22,6 +22,12 @@
         <groupId>fr.cnes.lpisis.gpcc.python</groupId>
         <artifactId>gpcchs_l_ifl_converter</artifactId>
         <type>isis-python-module-dependency</type>
+        <classifier>unix_dev</classifier>
+      </dependency>
+      <dependency>
+        <groupId>fr.cnes.lpisis.gpcc.cpp</groupId>
+        <artifactId>gpcctc_l_cnt_isisStartContainer</artifactId>
+        <type>isis-container-cpp-bundle</type>
         <classifier>unix_dev</classifier>
       </dependency>
     </dependencies>
