[FT:#6043] Update gitignore files to fix problems and ignore python producted files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 target
 __pycache__
-.settings
-.project
-.pydevproject
-.classpath
+*.settings
+*.project
+*.pydevproject
+*.classpath
 *~
 node_modules
-.idea
-.idea
-.pyc
+*.idea
+*.pyc
