--- a/GPCCHS_L_IFL/src/api/python/pom.xml
+++ b/GPCCHS_L_IFL/src/api/python/pom.xml
@@ -13,7 +13,7 @@
     <relativePath/>
   </parent>
   <modules>
-    <module>converter</module>
+    <module>bridge</module>
     <module>interface</module>
   </modules>
   <build>
