--- a/GPCCHS_L_IFL/src/impl/python/pom.xml
+++ b/GPCCHS_L_IFL/src/impl/python/pom.xml
@@ -13,7 +13,7 @@
     <relativePath/>
   </parent>
   <modules>
-    <module>converter_test</module>
+    <module>bridge_test</module>
   </modules>
   <build>
     <plugins>
