--- a/GPCCHS_L_IFL/src/api/python/bridge/pom.xml
+++ b/GPCCHS_L_IFL/src/api/python/bridge/pom.xml
@@ -2,7 +2,7 @@
     <!-- Produced by Acceleo Python Generator 1.1.2-R8 -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.cnes.lpisis.gpcc.python</groupId>
-    <artifactId>gpcchs_l_ifl_converter</artifactId>
+    <artifactId>gpcchs_l_ifl_bridge</artifactId>
     <packaging>isis-python-module-dependency</packaging>
     <version>2.0.0-R10S1-SNAPSHOT</version>
 
