--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
@@ -71,6 +71,9 @@
   ],
   "settings": {
     "import/resolver": {
+      "babel-module": {
+        "root": ["lib"]
+      },
       "webpack": {
         "config": "webpack/config.eslint.js"
       }
