--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -85,6 +85,9 @@
   "author": "ATOS",
   "license": "ATOS",
   "keywords": [],
+  "moduleRoots": [
+    "lib"
+  ],
   "dependencies": {
     "ajv": "~5.1.1",
     "asar": "~0.13.0",
@@ -95,6 +98,7 @@
     "babel-loader": "~6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-module-resolver": "^2.5.0",
     "babel-plugin-transform-class-properties": "~6.23.0",
     "babel-polyfill": "~6.23.0",
     "babel-preset-es2015": "~6.24.0",
@@ -128,6 +132,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-config-airbnb-base": "^11.3.2",
+    "eslint-import-resolver-babel-module": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "~1.7.1",
     "eslint-plugin-import": "^2.2.0",
