[HL] Fix build, simplifying .babelrc file

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.babelrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.babelrc
@@ -12,21 +12,11 @@
   ],
   "env": {
     "test": {},
-    "production": {
-      "presets": [
-        "react-optimize"
-      ],
-      "plugins": [
-  		  "babel-plugin-lodash"
-      ]
-    },
+    "production": {},
     "development": {
       "presets": [
         "react-hmre"
-      ],
-  	  "plugins": [
-  		  "babel-plugin-lodash"
-  	  ]
+      ]
     }
   }
 }
